<resources>
    <string name="app_name">Safetify</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_faces">Number of Faces: </string>
    <string name="smile_value">Smile Value: </string>
    <string name="gaze_point_value">Gaze Point Value: ( , ) </string>
    <string name="face_roll_value">Face Roll Value: </string>
    <string name="face_pitch_value">Face Pitch Value: </string>
    <string name="face_yaw_value">Face Yaw Value: </string>
    <string name="left_eye_blink_value">Left Eye Blink Value: </string>
    <string name="right_eye_blink_value">Right Eye Blink Value: </string>
    <string name="horizontal_gaze">Horizontal Gaze: </string>
    <string name="vertical_gaze">Vertical Gaze: </string>
    <string name="calibrating">Calibrando...</string>
</resources>
