<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context="org.jojoma.safe.CameraPreviewActivity" >

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
		android:layout_above="@+id/progressBar" />

	<TextView
		android:id="@+id/numFaces"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/progressBar"
		android:layout_above="@+id/progressBar"
		android:text="@string/number_of_faces"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/smileValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/progressBar"
		android:layout_above="@+id/progressBar"
		android:text="@string/smile_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/gazePoint"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/progressBar"
		android:layout_above="@+id/numFaces"
		android:text="@string/gaze_point_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/faceRoll"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/progressBar"
		android:layout_above="@+id/smileValue"
		android:text="@string/face_roll_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/leftEyeBlink"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/progressBar"
		android:layout_above="@+id/gazePoint"
		android:text="@string/left_eye_blink_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/rightEyeBlink"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/progressBar"
		android:layout_above="@+id/gazePoint"
		android:text="@string/right_eye_blink_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/faceYawValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/progressBar"
		android:layout_above="@+id/leftEyeBlink"
		android:text="@string/face_yaw_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/facePitchValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/progressBar"
		android:layout_above="@+id/rightEyeBlink"
		android:text="@string/face_pitch_value"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/horizontalGazeAngle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/progressBar"
		android:layout_above="@+id/faceYawValue"
		android:text="@string/horizontal_gaze"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<TextView
		android:id="@+id/verticalGazeAngle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/progressBar"
		android:layout_above="@+id/facePitchValue"
		android:text="@string/vertical_gaze"
		android:textColor="@color/white"
		android:background="@color/black"/>

	<com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
		android:id="@+id/progressBar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true"
		app:rcProgressColor="@color/round_corner_progress_bar_progress_default"
		app:rcSecondaryProgress="100"
		app:rcSecondaryProgressColor="@color/round_corner_progress_bar_secondary_progress_default"
		app:rcBackgroundColor="@color/round_corner_progress_bar_background_default"
		app:rcBackgroundPadding="0dp"
		app:rcReverse="false"
		app:rcMax="100"
		app:rcRadius="20dp" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true">

		<ImageView
			android:id="@+id/openSettingsButton"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:src="@drawable/opensettings" />

		<ImageView
			android:id="@+id/openRecalibrateButton"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:src="@drawable/calibratesettings" />

		<ImageView
			android:id="@+id/openViewDataButton"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:src="@drawable/viewdatasettings" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_above="@+id/progressBar">

		<ProgressBar
			android:id="@+id/calibrating_circle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@android:style/Widget.ProgressBar.Large"
			android:visibility="invisible"/>

		<TextView
			android:id="@+id/calibrating_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/calibrating_circle"
			android:visibility="invisible"
			android:text="@string/calibrating"
			android:textColor="@color/white" />

	</LinearLayout>

	<ImageView
		android:id="@+id/alertIcon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/alert_icon"
		android:layout_centerInParent="true"
		android:visibility="invisible"/>
</RelativeLayout>
